[gd_scene load_steps=3 format=2]

[ext_resource path="res://titles/diff_sel.gd" type="Script" id=1]
[ext_resource path="res://titles/background.png" type="Texture" id=2]

[node name="diff_sel" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511, 299 )
scale = Vector2( 6.03529, 5.05085 )
texture = ExtResource( 2 )

[node name="easy" type="Button" parent="."]
margin_left = 366.0
margin_top = 350.0
margin_right = 536.0
margin_bottom = 396.0
text = "easy"

[node name="mid" type="Button" parent="."]
margin_left = 366.0
margin_top = 414.0
margin_right = 536.0
margin_bottom = 460.0
text = "meduim"

[node name="hard" type="Button" parent="."]
margin_left = 364.0
margin_top = 476.0
margin_right = 534.0
margin_bottom = 522.0
text = "hard"

[node name="Label" type="Label" parent="."]
margin_left = 188.0
margin_top = 180.0
margin_right = 322.0
margin_bottom = 194.0
rect_scale = Vector2( 4, 4 )
text = "Select your difficulty!"

[connection signal="pressed" from="easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="mid" to="." method="_on_mid_pressed"]
[connection signal="pressed" from="hard" to="." method="_on_hard_pressed"]
